adição de novos arquivos

--- a/atividade-02.html
+++ b/atividade-02.html
@@ -3,23 +3,9 @@
 <html>
 <head>
 <title>Exercício 2: Verificar par ou impar</title>
+<script src="atividade-02.js"> </script>
 </head>
 <body>
 
-<script>
-
-const num = parseFloat(prompt("Digite o numero:"));
-
-function verificarPar(num){
-if (num%2==0){
-    document.write ("par")
-}else {
-    document.write ("impar")
-}
-}
-
-console.log( verificarPar(num))
-
-</script>
 </body>
 </html>
