--- a/atividade-04.html
+++ b/atividade-04.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title> Exercício: Calcular cm </title>
+  <script src="atividade-04.js"></script>
 </head>
 <body>
 
@@ -11,16 +12,6 @@
   <button onclick="calcularCentimetros()">Calcular centímetros</button>
   <p id="resultado"></p>
 
-<script>
-  function calcularCentimetros() {
-    const polegadas = parseFloat(document.getElementById("polegadas").value);
-
-    const centimetros = polegadas * 2.54
-
-  document.getElementById("resultado").textContent = polegadas + " polegadas em centímetros fica: " + centimetros
-}
-
-</script>
 </body>
 </html>
 
