--- a/atividade-07.html
+++ b/atividade-07.html
@@ -2,25 +2,9 @@
 <html>
 <head>
 <title>Exercício: Verificar maior número </title>
+<script src="atividade-07.js"></script>
 </head>
 <body>
 
-<script>
-
-const num = parseFloat(prompt("Digite o primeiro número: "));
-const num2 = parseFloat(prompt("Digite o segundo número: "));
- 
-function verificarNum() { 
-    if (num > num2) {
-        document.write("O maior número é o: ", num);
-    }
-    else {
-        document.write("O maior número é o: ", num2);
-    }
-}
-
-verificarNum(); 
-
-</script>
 </body>
 </html>
