--- a/atividade-08.html
+++ b/atividade-08.html
@@ -2,22 +2,9 @@
 <html>
 <head>
 <title>Exercício: Verificar desconto </title>
+<script src="atividade-08.js"></script>
 </head>
 <body>
 
-<script>
-
-const valor = parseFloat(prompt("Digite o valor total: "));
-const desconto = parseFloat(prompt("Digite o desconto: "));
- 
-function verificarDesc() {
-    return (valor * desconto /100)
-}
-
-const valorComDesconto = valor - verificarDesc();
-
-document.write ("O valor com desconto é de: R$", valorComDesconto.toFixed(2));
-
-</script>
 </body>
 </html>
