--- a/atividade-03.html
+++ b/atividade-03.html
@@ -2,23 +2,9 @@
 <html>
 <head>
 <title>Exercício: Calcular media</title>
+<script src="atividade-03.js"></script>
 </head>
 <body>
 
-<script>
-
-const num = parseFloat(prompt("Digite a primeira nota: "));
-const num2 = parseFloat (prompt ("Digite a segunda nota: "));
-const num3 = parseFloat (prompt ("Digite a terceira nota: "))
-
-function calcularMedia(num, num2, num3){
-   return (num + num2 + num3)/3;
-}
-
-const media = calcularMedia(num, num2, num3);
-
-document.write ("A média é: ", media);
-
-</script>
 </body>
 </html>
