--- a/atividade-06.html
+++ b/atividade-06.html
@@ -2,22 +2,8 @@
 <html>
 <head>
 <title>Exercício: Calcular area do triângulo </title>
+<script src="atividade-06.js"></script>
 </head>
 <body>
-
-<script>
-
-const base = parseFloat(prompt("Digite o número da base: "));
-const altura = parseFloat (prompt ("Digite o número da altura: "));
-
-function calcularArea(base, altura){
-   return (base * altura / 2);
-}
-
-const area = calcularArea(base, altura);
-
-document.write ("A área é: ", area);
-
-</script>
 </body>
 </html>
