--- a/atividade-10.html
+++ b/atividade-10.html
@@ -2,29 +2,8 @@
 <html>
 <head>
 <title>Exercício: Calcular Fatorial</title>
+<script src="atividade-10.js"></script>
 </head>
 <body>
-
-<script>
-
-
-const num = parseInt(prompt("Digite um número: "));
-
-function calcularFatorial(num) {
-    if (num === 0 || num === 1) {
-        return 1;
-    }
-    return num * calcularFatorial(num - 1);
-}
-
-
-if (num < 0) {
-    document.write("Não é possível calcular o fatorial de um número negativo.");
-} else {
-    const fatorial = calcularFatorial(num);
-    document.write(`O fatorial de ${num} é ${fatorial}.`);
-}
-
-</script>
 </body>
 </html>
